infrastructure/kubernetes/auth-server-deploy.yaml
kind: Pod
apiVersion: v1
metadata:
  name: auth-server
  labels:
    app: auth-server
spec:
  containers:
    - name: auth-server
      image: ihorbunov/auth-server:0.1.14
---
kind: Service
apiVersion: v1
metadata:
  name: auth-server
spec:
  selector:
    app: auth-server
  ports:
    - port: 8084
