infrastructure/kubernetes/postgres-deploy.yaml
kind: Pod
apiVersion: v1
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: ihorbunov/postgres:12
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
