infrastructure/kubernetes/auth-ngrok-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: auth-server
          servicePort: 8084
        path: /auth
      - backend:
          serviceName: auth-server
          servicePort: 8084
        path: /login
      - backend:
          serviceName: auth-server
          servicePort: 8084
        path: /index.html
      - backend:
          serviceName: chmgmt
          servicePort: 8081
        path: /chmgmt(/|$)(.*)
